force-app/main/default/objects/custom_create109__c/custom_create109__c.object-meta.xml
<CustomObject>
    <label>Custom created object109</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects109</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>