force-app/main/default/objects/custom_create109__c/fields/custom_create_109field502__c.field-meta.xml
<CustomField>
    <fullName>custom_create_109field502__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 109field502</label>
    <type>Checkbox</type>
</CustomField>